# GitTOT

./: .gitignore  GitTOT.py  README.md  gittot_old.py  pyproject.toml
gittot/: cli.py  config.py  render.py  stats.py  time_filters.py
gittot/sources/: github_api.py  local_git.py
